# polymarket-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  deploy.sh  generate_report.py  pyproject.toml
docs/plans/: 2026-03-20-nba-penny-picking-feasibility.md  2026-06-11-worldcup-scanner-design.md
src/: config.py  main.py  penny_main.py
src/alerts/: feishu.py  formatter.py
src/api/: clob.py  gamma.py
src/models/: bundle.py  market.py  opportunity.py  penny_signal.py
src/scanner/: arbitrage_detector.py  live_lag_scanner.py  market_classifier.py  market_fetcher.py  orderbook_enricher.py  orderbook_verifier.py  outlier_detector.py  outlier_scanner.py  penny_detector.py  penny_picking_scanner.py  pipeline.py  team_resolver.py  value_detector.py  worldcup_scanner.py
src/utils/: logging.py
tests/: conftest.py  test_arbitrage_detector.py  test_clob_client.py  test_config.py  test_feishu.py  test_formatter.py  test_gamma_client.py  test_live_lag_scanner.py  test_market_classifier.py  test_outlier_detector.py  test_outlier_scanner.py  test_penny_picking_scanner.py  test_pipeline.py  test_team_resolver.py  test_worldcup_scanner.py
